# rx666m

./: .gitignore  README.md
SoapyRX666m/: AGC.hpp  CMakeLists.txt  FileWriter.hpp  GzFileWriter.hpp  LowLevel.cpp  LowLevel.hpp  NCO.hpp  Registration.cpp  RingBuffer.hpp  RingBufferTest.cpp  Settings.cpp  SoapyRX666m.hpp  Spectrum.cpp  Spectrum.hpp  StatsDumper.hpp  Streaming.cpp  Utils.hpp  compile.sh  rx666m_convert.cpp  rx666m_util.cpp  tuner_r82xx.cpp  tuner_r82xx.h
common/: rx666m_ioctl.h
driver/: 52-rx666m.rules  Makefile  dkms-install.sh  dkms-remove.sh  dkms.conf  rx666m.c
